[tool.poetry]
name = "boj"
version = "0.0.2"
description = "BOJ Offline Judge"
license = "GPL-3.0-only"
authors = ["Hepheir <hepheir@gmail.com>"]
maintainers = ["Hepheir <hepheir@gmail.com>"]
readme = "README_pypi.md"
repository = "https://github.com/Hepheir/BOJ-Offline-Judge"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
twine = "^3.4.1"
build = "^0.3.1.post1"
autopep8 = "^1.5.5"
pylint = "^2.8.3"
pytest = "^5.2"

[tool.poetry.scripts]
poetry = 'poetry.console:run'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Hepheir/BOJ-Offline-Judge/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
