[project]
name = "boj"
version = "0.1.1"
authors = [{ name = "Hepheir", email = "hepheir@gmail.com" }]
maintainers = [{ name = "Hepheir", email = "hepheir@gmail.com" }]
description = "BOJ Offline Judge"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
keywords = ['boj']
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Korean",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Hepheir/BOJ-Offline-Judge"
Repository = "https://github.com/Hepheir/BOJ-Offline-Judge"
Issues = "https://github.com/Hepheir/BOJ-Offline-Judge/issues"
Changelog = "https://github.com/hepheir/BOJ-Offline-Judge/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
