[metadata]
name = boj
version = 0.0.1
author = Hepheir
author_email = hepheir@gmail.com
description = BOJ Offline Judge :: Predict your score of Baekjoon Online Judge.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hepheir/BOJ-Offline-Judge
project_urls =
    Bug Tracker = https://github.com/Hepheir/BOJ-Offline-Judge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    
[options]
packages = find:
python_requires = >=3.7